--- a/reach.css
+++ b/reach.css
@@ -1,31 +1,47 @@
 body {
     font-family: 'Segoe UI semibold';
     margin: 0;
-  }
+}
 
-  #form-message {
-      height: 500px;
+.card {
+    height: 100%;
+}
+
+.footer {
+    height: 50px;
+    width: 100%;
+    margin: 0;
+}
+  
+.footer-container {
+    width: 100%;
+    height: 100%;
+    padding-top: 10px;
+}
+
+#form-message {
+      height: 510px;
       align-items: center;
-  }
+}
 
   /* width */
 ::-webkit-scrollbar {
     width: 5px;
-  }
+}
   
   /* Track */
-  ::-webkit-scrollbar-track {
+::-webkit-scrollbar-track {
     background: #f1f1f1;
     border-radius: 20px;
-  }
+}
   
   /* Handle */
-  ::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb {
     background: #888;
     border-radius: 10px;
-  }
+}
   
   /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
+::-webkit-scrollbar-thumb:hover {
     background: #555;
-  }
+}
