--- a/reach.css
+++ b/reach.css
@@ -8,7 +8,7 @@ body {
 }
 
 .footer {
-    height: 50px;
+    height: 60px;
     width: 100%;
     margin: 0;
 }
@@ -19,9 +19,76 @@ body {
     padding-top: 10px;
 }
 
+.btn-fb, .btn-twitter, .btn-instagram, .btn-youtube, .btn-github {
+    height: 40px;
+    width: 45px;
+}
+
+.btn-fb {
+    border: 1px solid #3b579d;
+     color: #3b579d
+}
+
+.btn-fb:hover {
+    background: #3b579d;
+    color: #ffffff
+}
+
+.btn-twitter {
+    border: 1px solid #2caae1;
+    color: #2caae1
+}
+
+.btn-twitter:hover {
+    background: #2caae1;
+     color: #ffffff
+}
+
+.btn-instagram {
+    border: 1px solid #238285;
+     color: #238285
+}
+
+.btn-instagram:hover {
+    background: #238285;
+     color: #ffffff
+}
+
+.btn-youtube {
+    border: 1px solid #e52d27;
+    color: #e52d27
+}
+
+.btn-youtube:hover {
+    background: #e52d27;
+    color: #ffffff
+}
+
+.btn-github {
+    border: 1px solid #ea4c89;
+    color: #ea4c89
+}
+
+.btn-github:hover {
+    background: #ea4c89;
+     color: #ffffff
+}
+
 #form-message {
-      height: 510px;
+      height: 503px;
       align-items: center;
+}
+
+#form-message h3 {
+    color: rebeccapurple;
+    text-transform: capitalize;
+    font-weight: 100px;
+    font-style: italic;
+    transition: .6s;
+}
+
+#form-message h3:hover {
+    letter-spacing: 1px;
 }
 
   /* width */
